updated with the image publishe-subscriber node

--- a/package.xml
+++ b/package.xml
@@ -11,6 +11,12 @@
 
   <depend>rclcpp</depend>
   <depend>example_interfaces</depend>
+  <depend>std_msgs</depend>
+  <depend>sensor_msgs</depend>
+  <depend>cv_bridge</depend>
+  <depend>image_transport</depend>
+  <depend>OpenCV</depend>
+
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
